basic conditional rendering explored in ejs file

--- a/express/04-formHanling-basic/views/index.ejs
+++ b/express/04-formHanling-basic/views/index.ejs
@@ -9,28 +9,27 @@
   <body class="bg-zinc-900 text-white">
     <div class="max-w-screen-xl p-10 mx-auto">
       <form action="" class="w-full space-y-3 max-w-md">
-        <input
-          class="block w-full h-12 rounded-md border outline-none border-gray-600 px-4"
-          type="text"
-          name="title"
-          placeholder="Enter your title"
-        />
+        <input class="block w-full h-12 rounded-md outline-none bg-zinc-800 px-4" type="text" name="title" placeholder="Enter your title" />
         <textarea
-          class="block resize-none w-full h-32 rounded-md border outline-none border-gray-600 pt-4 px-4"
+          class="block resize-none w-full h-32 rounded-md outline-none bg-zinc-800 pt-4 px-4"
           name="note"
           placeholder="Enter your note"
         ></textarea>
         <button class="bg-blue-600 px-10 h-11 rounded-md" type="submit">Add Note</button>
       </form>
-      <div class="border-t border-gray-600 grid grid-cols-4 gap-3 mt-10 pt-10">
-        <div class="border border-gray-600 p-4 rounded-md">
+      <div class="border-t border-zinc-800 grid grid-cols-4 gap-3 mt-10 py-10">
+        <!-- <div class="bg-zinc-800 p-4 rounded-md">
+          <h1 class="text-xl font-semibold">Notes</h1>
+          <a href="" class="text-blue-600">see more</a>
+        </div> -->
+        <% if(notes.length > 0) { %> <% notes.forEach(note => { %>
+        <div class="bg-zinc-800 p-4 rounded-md">
           <h1 class="text-xl font-semibold">Notes</h1>
           <a href="" class="text-blue-600">see more</a>
         </div>
-        <div class="border border-gray-600 p-4 rounded-md">
-          <h1 class="text-xl font-semibold">Notes</h1>
-          <a href="" class="text-blue-600">see more</a>
-        </div>
+        <% }) %> <% } else { %>
+        <h5 class="text-center col-span-4 text-zinc-700 text-2xl mt-32">No notes found!</h5>
+        <%} %>
       </div>
     </div>
   </body>
