--- a/express/04-formHanling-basic/views/note.ejs
+++ b/express/04-formHanling-basic/views/note.ejs
@@ -11,7 +11,7 @@
       <a href="/" class="text-blue-600">Go back to home</a>
       <div class="mt-10">
         <h1 class="text-xl font-semibold"><%= title %></h1>
-        <p class="mt-1 text-gra-400"><%= note %></p>
+        <p class="mt-1"><%= note %></p>
       </div>
     </div>
   </body>
