--- a/mongodb/06-thought-share-mini-app/views/login.ejs
+++ b/mongodb/06-thought-share-mini-app/views/login.ejs
@@ -3,10 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Register</title>
+    <title>Login</title>
+    <style>
+      body {
+        font-family: "Montserrat", sans-serif;
+      }
+    </style>
   </head>
-  <body class="">
+  <body class="text-sm font-medium">
     <div class="h-screen flex flex-row-reverse">
       <div class="w-full bg-gray-100 h-full flex items-center justify-center">
         <div class="max-w-sm w-full space-y-3">
