--- a/mongodb/06-thought-share-mini-app/views/profile.ejs
+++ b/mongodb/06-thought-share-mini-app/views/profile.ejs
@@ -33,7 +33,7 @@
           <a href="/logout" class="h-10 inline-flex items-center justify-center px-10 rounded-md text-white bg-red-400">Logout</a>
         </div>
       </nav>
-      <form action="/profile/<%= user._id %>/post" method="POST" class="mt-5 space-y-3 max-w-md w-full">
+      <form action="/profile/<%= user._id %>/create-post" method="POST" class="mt-5 space-y-3 max-w-md w-full">
         <textarea
           name="content"
           placeholder="What's on your mind?"
@@ -46,16 +46,18 @@
         <span class="text-zinc-400 pl-1.5">( <%= user.posts.length %> )</span>
       </h2>
       <div class="grid grid-cols-3 gap-5">
-        <% user.posts.forEach((post) => { %>
+        <% user.posts.reverse().forEach((post) => { %>
         <div class="p-4 bg-gray-50 border border-gray-200 rounded-md">
           <span class="text-zinc-400">@<%= user.username %></span>
           <p class="text-zinc-800 mt-1 mb-2"><%= post.content %></p>
           <div class="flex items-center justify-between font-semibold">
-            <div class="text-indigo-400"><%= post.likes.length %></div>
+            <div class="text-indigo-400"><%= post.likes.length %> Likes</div>
             <div class="flex gap-3 items-center">
-              <a href="/like" class="text-gray-400">Like</a>
-              <a href="/edit-post" class="text-gray-400">Edit</a>
-              <a href="/delete/<%= user._id %>/delete-post/<%= post._id %>" class="text-gray-400">Delete</a>
+              <a href="/profile/<%= user._id %>/like-post/<%= post._id %>" class="text-gray-400">
+                <%= post.likes?.indexOf(user._id) === -1 ? "Like" : "Unlike" %>
+              </a>
+              <a href="/profile/<%= user._id %>/edit-post/<%= post._id %>" class="text-gray-400">Edit</a>
+              <a href="/profile/<%= user._id %>/delete-post/<%= post._id %>" class="text-gray-400">Delete</a>
             </div>
           </div>
         </div>
