multiple user like and only see edit option in self post feature enable

--- a/mongodb/06-thought-share-mini-app/views/allPost.ejs
+++ b/mongodb/06-thought-share-mini-app/views/allPost.ejs
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Login</title>
+    <title>All Thoughts</title>
     <style>
       body {
         font-family: "Montserrat", sans-serif;
@@ -18,6 +18,40 @@
     </style>
   </head>
   <body class="text-sm font-medium">
-    <div class="h-screen flex items-center justify-center">No Post Found</div>
+    <div class="max-w-screen-xl px-10 pb-10 mx-auto">
+      <nav class="flex items-center justify-between h-16 border-b border-gray-200 mb-5">
+        <h2>All Thoughts</h2>
+        <div class="flex items-center gap-5">
+          <a href="/profile/<%= userId %>" class="text-gray-400">Profile</a>
+          <a href="/logout" class="h-10 inline-flex items-center justify-center px-10 rounded-md text-white bg-red-400">Logout</a>
+        </div>
+      </nav>
+      <div>
+        <% if(allPost.length > 0) { %>
+        <div class="grid grid-cols-3 gap-5">
+          <% allPost.reverse().forEach((post) => { %>
+          <div class="p-4 bg-gray-50 border border-gray-200 rounded-md">
+            <span class="text-zinc-400">@<%= post.author.username %></span>
+            <p class="text-zinc-800 mt-1 mb-2"><%= post.content %></p>
+            <div class="flex items-center justify-between font-semibold">
+              <div class="text-indigo-400"><%= post.likes.length %> Likes</div>
+              <div class="flex gap-3 items-center">
+                <a href="/profile/<%= post.author._id %>/like-post/<%= post._id %>" class="text-gray-400">
+                  <%= post.likes?.includes(userId) ? "Unlike" : "Like" %>
+                </a>
+                <% if(post.author._id == userId) { %>
+                <a href="/profile/<%= post.author._id %>/edit-post/<%= post._id %>" class="text-gray-400">Edit</a>
+                <a href="/profile/<%= post.author._id %>/delete-post/<%= post._id %>" class="text-gray-400">Delete</a>
+                <% } %>
+              </div>
+            </div>
+          </div>
+          <% }) %>
+        </div>
+        <% } else { %>
+        <div class="h-screen flex items-center justify-center">No Post Found</div>
+        <% } %>
+      </div>
+    </div>
   </body>
 </html>
