--- a/mongodb/06-thought-share-mini-app/views/editProfile.ejs
+++ b/mongodb/06-thought-share-mini-app/views/editProfile.ejs
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Login</title>
+    <title>Edit Profile</title>
     <style>
       body {
         font-family: "Montserrat", sans-serif;
