--- a/mongodb/06-thought-share-mini-app/views/editProfile.ejs
+++ b/mongodb/06-thought-share-mini-app/views/editProfile.ejs
@@ -19,19 +19,20 @@
   </head>
   <body class="text-sm font-medium">
     <div class="flex items-center justify-center h-screen">
-      <form method="post" class="mt-5 space-y-3 max-w-md w-full">
+      <form action="/profile/<%= userId %>/edit-profile" enctype="multipart/form-data" method="post" class="mt-5 space-y-3 max-w-md w-full">
         <div>
           <label class="text-base text-slate-900 font-medium mb-3 block">Upload file</label>
           <input
             type="file"
-            name="profile"
-            class="w-full text-slate-500  bg-white border border-gray-300 file:cursor-pointer cursor-pointer file:border-0 file:py-3 file:px-4 file:mr-4 file:bg-gray-100 file:hover:bg-gray-200 file:text-slate-500 rounded-md"
+            name="avatar"
+            required
+            class="w-full text-slate-500 bg-white border border-gray-300 file:cursor-pointer cursor-pointer file:border-0 file:py-3 file:px-4 file:mr-4 file:bg-gray-100 file:hover:bg-gray-200 file:text-slate-500 rounded-md"
           />
           <p class="text-xs text-slate-500 mt-2">PNG, JPG SVG, WEBP, and GIF are Allowed.</p>
         </div>
         <div class="flex items-center justify-between gap-5">
           <button type="submit" class="h-10 inline-flex items-center justify-center px-10 rounded-md text-white bg-indigo-400">Update</button>
-          <a href="/profile" class="text-red-400">Cancel Upload</a>
+          <a href="/profile/<%= userId %>" class="text-red-400">Cancel Upload</a>
         </div>
       </form>
     </div>
