--- a/mongodb/06-thought-share-mini-app/views/profile.ejs
+++ b/mongodb/06-thought-share-mini-app/views/profile.ejs
@@ -21,14 +21,14 @@
     <div class="max-w-screen-2xl p-10">
       <nav class="flex items-center justify-between">
         <div class="flex items-center gap-3">
-          <img class="size-12 rounded-md object-cover object-center" src="/image/uploads/default.jpeg" alt="" />
+          <img class="size-12 rounded-md object-cover object-center" src="<%= user.profilePic ? user.profilePic : '/image/uploads/default.jpeg' %>" alt="" />
           <div>
             <h2 class="text-lg text-zinc-800"><%= user.name %></h2>
             <span class="text-zinc-400">@<%= user.username %></span>
           </div>
         </div>
         <div class="flex items-center gap-5">
-          <a href="/edit-profile" class="text-gray-400">Edit Profile</a>
+          <a href="/profile/<%= user._id %>/edit-profile" class="text-gray-400">Edit Profile</a>
           <a href="/" class="text-gray-400">All Post</a>
           <a href="/logout" class="h-10 inline-flex items-center justify-center px-10 rounded-md text-white bg-red-400">Logout</a>
         </div>
