profile page alignment fixed not it's in center view

--- a/mongodb/06-thought-share-mini-app/views/profile.ejs
+++ b/mongodb/06-thought-share-mini-app/views/profile.ejs
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body class="text-sm font-medium">
-    <div class="max-w-screen-2xl p-10">
+    <div class="max-w-screen-2xl mx-auto p-10">
       <nav class="flex items-center justify-between">
         <div class="flex items-center gap-3">
           <img class="size-12 rounded-md object-cover object-center" src="<%= user.profilePic ? user.profilePic : '/image/uploads/default.jpeg' %>" alt="" />
